@startuml

title Index (current)

package edu.tec.ic6821.fulltextsearch {

    package index {
        interface Index {
            index(String term, File):void
            search(String term):Set<File>
            isPersistent():boolean
            persist():void
            restore():boolean
        }

        class InMemoryMapIndex {
            - index:Map<String, Set<File>>
        }

        class MapIndex {
            - indexFile:File
            + MapIndex(:File, :Index)
        }

        Index <|.. InMemoryMapIndex
        Index <|.. MapIndex
        InMemoryMapIndex <-- MapIndex :<<delegate>>\nindex

        note right of InMemoryMapIndex
            persist() and restore()
            throws UnsupportedOperationException
        end note
    }
}

@enduml